--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,23 +1,117 @@
+<!DOCTYPE html>
 <html>
-    <header>
-        <title>MARIJUANA RECOMMENDATIONS</title>
-    </header>
-    <body>
-        <h4>MARIJUANA RECOMMENDATIONS:</h4>
-        <form action="/search" method="POST">
-            <p>
-                What are you looking for?
-                <input type="text" name="query" />
+<body>
+
+<h3>Effect 1</h3>
+
+            <form action="/search" method="POST" >
+            <label for="effects">Choose an effect:</label>
+            <select id="Effect" name="effect1">
+                <option value="Happy">Happy</option>
+                <option value="Uplifted">Uplifted</option>
+                <option value="Sleepy">Sleepy</option>
+                <option value="Aroused">Aroused</option>
+                <option value="Relaxed">Relaxed</option>
+                <option value="Creative">Creative</option>
+                <option value="Euphoric">Euphoric</option>
+                <option value="Energetic">Energetic</option>
+                <option value="Tingly">Tingly</option>
+                <option value="Talkative">Talkative</option>
+                <option value="Giggly">Giggly</option>
+                <option value="Focused">Focused</option>
+                <option value="Hungry">Hungry</option>
+            </select>
+
+            <h3>Effect 2</h3>
+
+            <label for="effects">Choose an effect:</label>
+            <select id="Effect" name="effect2">
+                <option value="Happy">Happy</option>
+                <option value="Uplifted">Uplifted</option>
+                <option value="Sleepy">Sleepy</option>
+                <option value="Aroused">Aroused</option>
+                <option value="Relaxed">Relaxed</option>
+                <option value="Creative">Creative</option>
+                <option value="Euphoric">Euphoric</option>
+                <option value="Energetic">Energetic</option>
+                <option value="Tingly">Tingly</option>
+                <option value="Talkative">Talkative</option>
+                <option value="Giggly">Giggly</option>
+                <option value="Focused">Focused</option>
+                <option value="Hungry">Hungry</option>
+            </select>
+
+            <h3>Flavor 1</h3>
+
+            <label for="flavor">Choose a flavor:</label>
+            <select id="Flavors" name="flavors">
+                <option value="Ammonia">Ammonia</option>
+                <option value="Apple">Apple</option>
+                <option value="Apricot">Apricot</option>
+                <option value="Berry">Berry</option>
+                <option value="Blueberry">Blueberry</option>
+                <option value="Butter">Butter</option>
+                <option value="Cheese">Cheese</option>
+                <option value="Chemical">Chemical</option>
+                <option value="Chestnut">Chestnut</option>
+                <option value="Citrus">Citrus</option>
+                <option value="Coffee">Coffee</option>
+                <option value="Diesel">Diesel</option>
+                <option value="Earthy">Earthy</option>
+                <option value="Flowery">Flowery</option>
+                <option value="Fruit">Fruit</option>
+                <option value="Grape">Grape</option>
+                <option value="Grapefruit">Grapefruit</option>
+                <option value="Herbal">Herbal</option>
+                <option value="Honey">Honey</option>
+                <option value="Lavender">Lavender</option>
+                <option value="Lemon">Lemon</option>
+                <option value="Lime">Lime</option>
+                <option value="Mango">Mango</option>
+                <option value="Menthol">Menthol</option>
+                <option value="Mint">Mint</option>
+                <option value="Nutty">Nutty</option>
+                <option value="Orange">Orange</option>
+                <option value="Peach">Peach</option>
+                <option value="Pear">Pear</option>
+                <option value="Pepper">Pepper</option>
+                <option value="Pine">Pine</option>
+                <option value="Pineapple">Pineapple</option>
+                <option value="Plum">Plum</option>
+                <option value="Pungent">Pungent</option>
+                <option value="Rose">Rose</option>
+                <option value="Sage">Sage</option>
+                <option value="Skunk">Skunk</option>
+                <option value="Spicy">Spicy</option>
+                <option value="Strawberry">Strawberry</option>
+                <option value="Sweet">Sweet</option>
+                <option value="Tar">Tar</option>
+                <option value="Tea">Tea</option>
+                <option value="Tobacco">Tobacco</option>
+                <option value="Tree">Tree</option>
+                <option value="Tropical">Tropical</option>
+                <option value="Vanilla">Vanilla</option>
+                <option value="Violet">Violet</option>
+                <option value="Woody">Woody</option>
+            </select>
+
+            <br>
+            <br>
+
+            <p>Anything Else?
+            <input type="text" name="text input" />
             </p>
 
-                <input type="submit" />
-            </p>
+            <br>
+
+	        <input type="submit">
+
         </form>
 
         <form action="/name" method="POST">
             <p>
                 Are you looking for a specific strain?
-                <input type="text" name="query" />
+                <input type="text" name="query2" />
             </p>
 
                 <input type="submit" />
