--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,8 +5,8 @@
 <h3>Effect 1</h3>
 
             <form action="/search" method="POST" >
-            <label for="effects">Choose an effect:</label>
-            <select id="Effect" name="effect1">
+            <label for="effects1">Choose an effect:</label>
+            <select id="Effect" name="item1">
                 <option value="Happy">Happy</option>
                 <option value="Uplifted">Uplifted</option>
                 <option value="Sleepy">Sleepy</option>
@@ -24,8 +24,8 @@
 
             <h3>Effect 2</h3>
 
-            <label for="effects">Choose an effect:</label>
-            <select id="Effect" name="effect2">
+            <label for="effects2">Choose an effect:</label>
+            <select id="Effect" name="item2">
                 <option value="Happy">Happy</option>
                 <option value="Uplifted">Uplifted</option>
                 <option value="Sleepy">Sleepy</option>
@@ -44,7 +44,7 @@
             <h3>Flavor 1</h3>
 
             <label for="flavor">Choose a flavor:</label>
-            <select id="Flavors" name="flavors">
+            <select id="Flavors" name="item3">
                 <option value="Ammonia">Ammonia</option>
                 <option value="Apple">Apple</option>
                 <option value="Apricot">Apricot</option>
@@ -99,7 +99,7 @@
             <br>
 
             <p>Anything Else?
-            <input type="text" name="text input" />
+            <input type="text" name="item4" />
             </p>
 
             <br>
