--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -4,26 +4,26 @@
     <script src="https://kit.fontawesome.com/be07601cea.js" crossorigin="anonymous"></script>
     <style>
         button.x {
-          background-color: green !important;
+          background-color: white;
           border: none;
-          color: black !important;
           padding: 12px 16px;
-          font-size: 30px;
+          font-size: 50px;
           cursor: pointer;
-          height: 31px !important; 
-          width: 33px !important; 
+          height: 50px !important; 
+          width: 50px !important; 
         }
 
-        /* Darker background on mouse-over */
-        button.x:hover {
-          background-color: black !important;
-        }
     </style>
 </head>
 
 <body>
-<button class ="x" style="display: none" > </button>
-<a href="/"><i class="fas fa-cannabis"></i></a>
+<button class ="x">
+    <a href="/">
+        <span style="color:Green";><i class="fas fa-cannabis"></i>
+        </span>
+        </a>
+</button>
+
 </body>
 
 <body>
